# clinician

./: CLAUDE.md  handoff.md  index.html
.claude/skills/handoff/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: deploy-demo.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.demo.config.ts
app/e2e/: acceptance.mjs
app/src/: main.tsx  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/db/: database.ts  db.test.ts  repositories.ts  schema.ts
app/src/domain/: domain.test.ts  seedMethods.ts  seedNorms.ts  sync.test.ts  sync.ts  syncHttp.test.ts  syncHttp.ts  types.ts
app/src/ui/: App.tsx  Examination.tsx  MethodsScreen.tsx  NormsScreen.tsx  ProfilesScreen.tsx  QualitativeProtocol.tsx  SettingsScreen.tsx  SubjectCard.tsx  SubjectsScreen.tsx  (+3 more)
clinician-os/: brief from Stepan.md  competitor-review.md  completed questionnaire for technical specifications.md  contour-a-publications.md  destructive-actions-audit.md  development-prompt.md  handoff.md  monitoring-and-digest.md  norm-selection-and-scoring.md  questionnaire-for-technical-requirements.md  roadmap.md  server-budget-options.md  shared-base-architecture.md  technical-specification-v1-for-prompt.md  technical-specification.md
clinician-os/research/: 2026-07-schulte.md  README.md  source-registry.md
server/: README.md  package-lock.json  package.json
server/src/: app.js  create-token.js  db.js  index.js
server/test/: api.test.js
(+6 files in other folders)
