[package]
name = "clinician-registry"
version = "0.1.0"
description = "Реестр патопсихологических методик"
edition = "2021"

[lib]
name = "clinician_registry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
